--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Home</title>
+    <title>Contato</title>
   </head>
   <body>
     <header>
@@ -17,83 +17,31 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="cursos.html">Cursos</a></li>
           <li><a href="contato.html">Contato</a></li>
-          <li><a href="adm.html">Área ADM</a></li>
+          <li><a href="adm.html">Area ADM</a></li>
         </ul>
       </nav>
     </header>
 
-    <main>
-      <div>
-        <section>
-          <h1>Descubra o novo ensino!</h1>
-          <p>Aprenda de verdade, no seu tempo, no seu ritmo</p>
-        </section>
-        <a href="cursos.html">Conheça nossos cursos</a>
-      </div>
-
-      <div>
-        <section id="about">
-          <h2>Sobre Nós</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.
-          </p>
-        </section>
-      </div>
-
-      <div>
-        <section id="testimonials">
-          <h2>Depoimentos</h2>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
+    <div>
+      <section id="contact">
+        <h2>Fale Conosco</h2>
+        <form>
+          <section>
+            <label for="name">Nome</label>
+            <input type="text" id="name" />
           </section>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
+          <section>
+            <label for="email">E-mail</label>
+            <input type="email" id="email" />
           </section>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
+          <section>
+            <label for="message">Mensagem</label>
+            <input type="text" id="message" />
           </section>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-        </section>
-      </div>
-    </main>
-
-    <!-- Inserir imagem do WhatsApp: a imagem é flutuante, ele sempre estará no canto inferior da tela e ao ser clicado, deve levar a página inicial do WhatsApp
-     -->
+          <button>Enviar</button>
+        </form>
+      </section>
+    </div>
 
     <footer>
       <img src="img/logo.png" alt="LabEscola logo" id="logo" />
