--- a/adm.html
+++ b/adm.html
@@ -8,290 +8,317 @@
     <title>ADM</title>
   </head>
   <body>
-    <header>
-      <a href="index.html">
-        <img src="img/logo.png" alt="LabEscola logo" id="logo" />
-      </a>
+    <header id="header">
+      <div id="logo" href="index.html">
+        <img
+          src="assets/logo-white.svg"
+          alt="LabEscola logo"
+          id="logo-immage"
+        />
+      </div>
       <nav>
-        <ul>
+        <ul id="header-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="cursos.html">Cursos</a></li>
           <li><a href="contato.html">Contato</a></li>
-          <li><a href="adm.html">Area ADM</a></li>
+          <li><a href="adm.html">Área ADM</a></li>
         </ul>
       </nav>
     </header>
-    <main>
-      <div>
-        <section id="nav">
-          <nav>
-            <ul>
-              <li><a href="#section-classes">Turmas</a></li>
-              <li><a href="#section-registration">Matrículas</a></li>
-              <li><a href="#section-payment">Financeiro Alunos</a></li>
-            </ul>
-          </nav>
-        </section>
-      </div>
 
-      <div>
-        <section id="section-classes">
-          <section>
+    <main id="adm-area">
+      <section id="nav">
+        <ul>
+          <li>
+            <a href="#" onclick="goToSection('section-classes')">Turmas</a>
+          </li>
+          <li>
+            <a href="#" onclick="goToSection('section-registration')"
+              >Matrículas</a
+            >
+          </li>
+          <li>
+            <a href="#" onclick="goToSection('section-payment')"
+              >Financeiro Alunos</a
+            >
+          </li>
+        </ul>
+      </section>
+
+      <section class="adm-section" id="section-classes">
+        <div id="subsection-adm-classes">
+          <div>
             <input
               type="number"
-              id="search"
+              id="class-search"
               placeholder="Digite o número da turma"
             />
-            <label for="search"><button>Buscar</button></label>
-          </section>
-          <section id="class">
-            <h2>Hipátia</h2>
-            <ul>
-              <li><b>Curso:</b> JavaScript</li>
-              <li><b>Início:</b> 30/11/2022</li>
-              <li><b>Término:</b> 30/01/2023</li>
-              <li><b>Nº de alunos:</b> 150</li>
-              <li><b>Período:</b> Noturno</li>
-              <li><b>Concluído:</b> Não</li>
-            </ul>
-          </section>
+            <label for="search"
+              ><button id="search-class-button">Buscar</button></label
+            >
+          </div>
+          <section id="classes-list">
+            <div class="class">
+              <h2>Hipátia</h2>
+              <ul>
+                <li><b>Curso:</b> JavaScript</li>
+                <li><b>Início:</b> 30/11/2022</li>
+                <li><b>Término:</b> 30/01/2023</li>
+                <li><b>Nº de alunos:</b> 150</li>
+                <li><b>Período:</b> Noturno</li>
+                <li><b>Concluído:</b> Não</li>
+              </ul>
+            </div>
 
-          <section id="class">
-            <h2>Sibyla</h2>
-            <ul>
-              <li><b>Curso:</b> JavaScript</li>
-              <li><b>Início:</b> 30/10/2022</li>
-              <li><b>Término:</b> 30/12/2022</li>
-              <li><b>Nº de alunos:</b> 200</li>
-              <li><b>Período:</b> Integral</li>
-              <li><b>Concluído:</b> Não</li>
-            </ul>
-          </section>
+            <div class="class">
+              <h2>Sibyla</h2>
+              <ul>
+                <li><b>Curso:</b> JavaScript</li>
+                <li><b>Início:</b> 30/10/2022</li>
+                <li><b>Término:</b> 30/12/2022</li>
+                <li><b>Nº de alunos:</b> 200</li>
+                <li><b>Período:</b> Integral</li>
+                <li><b>Concluído:</b> Não</li>
+              </ul>
+            </div>
 
-          <section id="class">
-            <h2>Curie</h2>
-            <ul>
-              <li><b>Curso:</b> HTML e CSS</li>
-              <li><b>Início:</b> 15/09/2022</li>
-              <li><b>Término:</b> 15/10/2022</li>
-              <li><b>Nº de alunos:</b> 180</li>
-              <li><b>Período:</b> Noturno</li>
-              <li><b>Concluído:</b> Não</li>
-            </ul>
-          </section>
+            <div class="class">
+              <h2>Curie</h2>
+              <ul>
+                <li><b>Curso:</b> HTML e CSS</li>
+                <li><b>Início:</b> 15/09/2022</li>
+                <li><b>Término:</b> 15/10/2022</li>
+                <li><b>Nº de alunos:</b> 180</li>
+                <li><b>Período:</b> Noturno</li>
+                <li><b>Concluído:</b> Não</li>
+              </ul>
+            </div>
 
-          <section id="class">
-            <h2>Zhenyi</h2>
-            <ul>
-              <li><b>Curso:</b> HTML e CSS</li>
-              <li><b>Início:</b> 01/11/2022</li>
-              <li><b>Término:</b> 01/01/2023</li>
-              <li><b>Nº de alunos:</b> 80</li>
-              <li><b>Período:</b> Integral</li>
-              <li><b>Concluído:</b> Não</li>
-            </ul>
-          </section>
+            <div class="class">
+              <h2>Zhenyi</h2>
+              <ul>
+                <li><b>Curso:</b> HTML e CSS</li>
+                <li><b>Início:</b> 01/11/2022</li>
+                <li><b>Término:</b> 01/01/2023</li>
+                <li><b>Nº de alunos:</b> 80</li>
+                <li><b>Período:</b> Integral</li>
+                <li><b>Concluído:</b> Não</li>
+              </ul>
+            </div>
 
-          <section id="class">
-            <h2>Clarke</h2>
-            <ul>
-              <li><b>Curso:</b> HTML e CSS</li>
-              <li><b>Início:</b> 04/07/2022</li>
-              <li><b>Término:</b> 04/09/2022</li>
-              <li><b>Nº de alunos:</b> 200</li>
-              <li><b>Período:</b> Noturno</li>
-              <li><b>Concluído:</b> Sim</li>
-            </ul>
-          </section>
+            <div class="class">
+              <h2>Clarke</h2>
+              <ul>
+                <li><b>Curso:</b> HTML e CSS</li>
+                <li><b>Início:</b> 04/07/2022</li>
+                <li><b>Término:</b> 04/09/2022</li>
+                <li><b>Nº de alunos:</b> 200</li>
+                <li><b>Período:</b> Noturno</li>
+                <li><b>Concluído:</b> Sim</li>
+              </ul>
+            </div>
 
-          <section id="class">
-            <h2>Blackwell</h2>
-            <ul>
-              <li><b>Curso:</b> APIs Rest</li>
-              <li><b>Início:</b> 20/03/2022</li>
-              <li><b>Término:</b> 20/06/2022</li>
-              <li><b>Nº de alunos:</b> 100</li>
-              <li><b>Período:</b> Integral</li>
-              <li><b>Concluído:</b> Sim</li>
-            </ul>
-          </section>
+            <div class="class">
+              <h2>Blackwell</h2>
+              <ul>
+                <li><b>Curso:</b> APIs Rest</li>
+                <li><b>Início:</b> 20/03/2022</li>
+                <li><b>Término:</b> 20/06/2022</li>
+                <li><b>Nº de alunos:</b> 100</li>
+                <li><b>Período:</b> Integral</li>
+                <li><b>Concluído:</b> Sim</li>
+              </ul>
+            </div>
 
-          <section id="class">
-            <h2>Elion</h2>
-            <ul>
-              <li><b>Curso:</b> APIs Rest</li>
-              <li><b>Início:</b> 12/01/2022</li>
-              <li><b>Término:</b> 12/06/2022</li>
-              <li><b>Nº de alunos:</b> 200</li>
-              <li><b>Período:</b> Noturno</li>
-              <li><b>Concluído:</b> Sim</li>
-            </ul>
-          </section>
+            <div class="class">
+              <h2>Elion</h2>
+              <ul>
+                <li><b>Curso:</b> APIs Rest</li>
+                <li><b>Início:</b> 12/01/2022</li>
+                <li><b>Término:</b> 12/06/2022</li>
+                <li><b>Nº de alunos:</b> 200</li>
+                <li><b>Período:</b> Noturno</li>
+                <li><b>Concluído:</b> Sim</li>
+              </ul>
+            </div>
 
-          <section id="class">
-            <h2>Burnell</h2>
-            <ul>
-              <li><b>Curso:</b> APIs Rest</li>
-              <li><b>Início:</b> 18/10/2022</li>
-              <li><b>Término:</b> 18/04/2023</li>
-              <li><b>Nº de alunos:</b> 90</li>
-              <li><b>Período:</b> Integral</li>
-              <li><b>Concluído:</b> Não</li>
-            </ul>
+            <div class="class">
+              <h2>Burnell</h2>
+              <ul>
+                <li><b>Curso:</b> APIs Rest</li>
+                <li><b>Início:</b> 18/10/2022</li>
+                <li><b>Término:</b> 18/04/2023</li>
+                <li><b>Nº de alunos:</b> 90</li>
+                <li><b>Período:</b> Integral</li>
+                <li><b>Concluído:</b> Não</li>
+              </ul>
+            </div>
           </section>
-        </section>
+        </div>
+      </section>
 
-        <section id="section-registration">
-          <section>
+      <section class="adm-section" id="section-registration">
+        <div class="subsection-adm">
+          <section class="adm-form" id="registration-box">
             <h2>Matrículas</h2>
             <form>
               <section>
                 <label for="name">Nome</label>
-                <input type="text" id="name" />
+                <input class="adm-input" type="text" id="registration-name" />
               </section>
               <section>
                 <label for="course">Curso</label>
-                <input type="text" id="course" />
+                <input class="adm-input" type="text" id="registration-course" />
               </section>
               <section>
                 <label for="class">Turma</label>
-                <input type="text" id="class" />
+                <input class="adm-input" type="text" id="registration-class" />
               </section>
               <section>
                 <label for="installments">Nº de Parcelas</label>
-                <input type="number" id="installments" />
+                <input
+                  class="adm-input"
+                  type="number"
+                  id="registration-installments"
+                />
               </section>
-              <button>Matricular estudante</button>
+              <button class="adm-button" id="registration-button">
+                Matricular estudante
+              </button>
             </form>
           </section>
 
           <section id="confirmation">
-            <h2>Matrícula de estudante efetivada!</h2>
-            <p>Matrícula de estudante efetivada</p>
-            <ul>
-              <li>Nome: Calvin Klein</li>
-              <li>Curso: JavaScript</li>
-              <li>Turma: Clarke</li>
-            </ul>
+            <div id="confirmation-message">
+              <h2>Matrícula de estudante efetivada!</h2>
+              <ul>
+                <li>Matrícula efetivada:</li>
+                <li>Nome: Calvin Klein</li>
+                <li>Curso: JavaScript</li>
+                <li>Turma: Clarke</li>
+              </ul>
+            </div>
+            <img
+              src="assets/check-green.svg"
+              alt="check-mark"
+              id="check-mark"
+            />
           </section>
-        </section>
+        </div>
+      </section>
 
-        <section id="section-payment">
-          <section>
+      <section class="adm-section" id="section-payment">
+        <div class="subsection-adm">
+          <section class="adm-form" id="payment-box">
             <h2>Financeiro</h2>
-            <form>
-              <section>
-                <label for="course">Curso</label>
-                <input
-                  type="text"
-                  value="JavaScript, HTML"
-                  data-role="tagsinput"
-                />
+            <form id="payment-form">
+              <label for="course">Curso</label>
+              <input
+                type="text"
+                value="JavaScript, HTML"
+                data-role="tagsinput"
+                class="adm-input"
+                id="courses-basket-input"
+              />
+              <div id="add-more">
                 <a href="cursos.html">Adicionar outro curso</a>
-              </section>
-              <section>
+              </div>
+
+              <div id="installments-input">
                 <label for="installments">Nº de Parcelas</label>
-                <input type="number" id="installments" />
-              </section>
-              <button>Ver valor</button>
+              </div>
+              <div>
+                <input type="number" class="adm-input" id="installments" />
+              </div>
+              <button class="adm-button">Ver valor</button>
             </form>
+
+            <section id="total-value">
+              <h2>Valor</h2>
+              <p>Desconto de 20%. Parcelas de 2x de R$ 1880,00</p>
+            </section>
           </section>
 
-          <section id="total-value">
-            <h2>Valor</h2>
-            <p>Desconto de 20%. Parcelas de 2x de R$ 1880,00</p>
-          </section>
-
-          <section id="student-report">
+          <section class="adm-form" id="student-report">
             <h2>Relatório de estudante</h2>
             <section id="search">
-                <label for="name">Nome</label>
-                <input type="search" id="name" />
-                <button>Buscar</button>
+              <label for="name">Nome</label>
+              <input type="search" class="adm-input" id="name" />
+              <button class="adm-button">Buscar</button>
             </section>
             <section id="report">
-                <ul>
-                    <li>Estudante: Timothee Chalamet</li>
-                    <li>Turma: Hipátia</li>
-                    <li>Curso: JavaScript</li>
-                    <li>Valor total: R$ 900,00</li>
-                    <li>Valor das parcelas: R$ 100,00</li>
-                    <li>Nº de parcelas: 9</li>
-                </ul>
+              <ul>
+                <li>Estudante: Timothee Chalamet</li>
+                <li>Turma: Hipátia</li>
+                <li>Curso: JavaScript</li>
+                <li>Valor total: R$ 900,00</li>
+                <li>Valor das parcelas: R$ 100,00</li>
+                <li>Nº de parcelas: 9</li>
+              </ul>
             </section>
           </section>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <img src="img/logo.png" alt="LabEscola logo" id="logo" />
-      <section id="address">
-        <h3>Endereço</h3>
-        <div class="mapouter">
-          <div class="gmap_canvas">
+      <div>
+        <img
+          src="assets/logo-trans.svg"
+          alt="LabEscola logo"
+          id="footer-logo"
+        />
+      </div>
+      <div id="footer-elements">
+        <section id="footer-address">
+          <h3 id="footer-headers">Endereço</h3>
+
+          <div id="google-map" class="mapouter">
             <iframe
-              width="600"
-              height="500"
               id="gmap_canvas"
               src="https://maps.google.com/maps?q=rua%20pais%20leme,%20215,%20pinheiros&t=&z=13&ie=UTF8&iwloc=&output=embed"
               frameborder="0"
               scrolling="no"
               marginheight="0"
               marginwidth="0"
-            ></iframe
-            ><a href="https://123movies-to.org">123movies</a><br /><style>
-              .mapouter {
-                position: relative;
-                text-align: right;
-                height: 500px;
-                width: 600px;
-              }</style
-            ><a href="https://www.embedgooglemap.net"
-              >embedding google maps on website</a
-            ><style>
-              .gmap_canvas {
-                overflow: hidden;
-                background: none !important;
-                height: 500px;
-                width: 600px;
-              }
-            </style>
+            ></iframe>
           </div>
-        </div>
-        <p>R. Pais Leme, 215, CEP 05422-150 - Pinheiros, São Paulo - SP</p>
-      </section>
+          <p id="business-address">
+            R. Pais Leme, 215, CEP 05422-150, São Paulo - SP
+          </p>
+        </section>
 
-      <section id="links">
-        <h3>Links</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="cursos.html">Cursos</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contato.html">Fale conosco</a></li>
-          <li><a href="termos.html">Termos e condições</a></li>
-          <li><a href="privacidade.html">Política de privacidade</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-        </ul>
-      </section>
+        <section id="footer-links">
+          <h3 id="footer-headers">Links</h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cursos.html">Cursos</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contato.html">Fale conosco</a></li>
+            <li><a href="termos.html">Termos e condições</a></li>
+            <li><a href="privacidade.html">Política de privacidade</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+          </ul>
+        </section>
 
-      <section id="social">
-        <h3>Redes sociais</h3>
-        <ul>
-          <li><a>LOGO TWITTER</a></li>
-          <li><a>LOGO LINKEDIN</a></li>
-          <li><a>LOGO FACEBOOK</a></li>
-          <li><a>LOGO INSTAGRAM</a></li>
-        </ul>
-      </section>
+        <section id="footer-social">
+          <h3 id="footer-headers">Redes sociais</h3>
+          <div id="social-box">
+            <img src="assets/twitter.svg" alt="twitter-logo" />
+            <img src="assets/linkedin.svg" alt="linkedin-logo" />
+            <img src="assets/face.svg" alt="facebook-logo" />
+            <img src="assets/insta.svg" alt="instagram-logo" />
+          </div>
+        </section>
 
-      <section id="restricted">
-        <h3>Área restrita</h3>
-        <ul>
-          <li><a href="adm.html">Área administrativa</a></li>
-          <li><a href="portal.html">Espaço do aluno</a></li>
-        </ul>
-      </section>
+        <section id="footer-restricted">
+          <h3 id="footer-headers">Área restrita</h3>
+          <ul>
+            <li><a href="adm.html">Área administrativa</a></li>
+            <li><a href="portal.html">Espaço do aluno</a></li>
+          </ul>
+        </section>
+      </div>
     </footer>
 
     <script src="data.js"></script>
