--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <title>Home</title>
   </head>
   <body>
-    <header>
-      <a href="index.html">
-        <img src="img/logo.png" alt="LabEscola logo" id="logo" />
-      </a>
+    <header id="header">
+      <div id="logo" href="index.html">
+        <img
+          src="assets/logo-white.svg"
+          alt="LabEscola logo"
+          id="logo-immage"
+        />
+      </div>
       <nav>
-        <ul>
+        <ul id="header-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="cursos.html">Cursos</a></li>
           <li><a href="contato.html">Contato</a></li>
@@ -23,71 +27,85 @@
     </header>
 
     <main>
-      <div>
-        <section>
-          <h1>Descubra o novo ensino!</h1>
-          <p>Aprenda de verdade, no seu tempo, no seu ritmo</p>
-        </section>
-        <a href="cursos.html">Conheça nossos cursos</a>
+      <div class="whatsapp-logo"></div>
+      
+      <div id="novo-ensino">
+        <h1>Descubra o novo ensino!</h1>
+        <p>Aprenda de verdade, no seu tempo, no seu ritmo</p>
+        <a id="courses-button" href="cursos.html">Conheça nossos cursos</a>
       </div>
 
-      <div>
-        <section id="about">
-          <h2>Sobre Nós</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.
-          </p>
-        </section>
+      <div id="about">
+        <h2>Sobre Nós</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Aenean quis arcu porta, rhoncus enim sit amet, mattis risus.
+          Quisque ac ligula enim. Duis sagittis erat libero, non accumsan purus
+          congue sed.
+        </p>
       </div>
 
       <div>
         <section id="testimonials">
-          <h2>Depoimentos</h2>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-          <section id="testimonial">
-            <img />
-            <!-- foto de estudante -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
+          <h2 id="testimonials-tittle">Depoimentos</h2>
+          <div id="testimonial-box">
+            <div id="testimonial">
+              <img
+                src="assets/person1.svg"
+                alt="foto-estudante"
+                id="foto-estudante"
+              />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                quis arcu porta, rhoncus enim sit amet, mattis risus. Quisque ac
+                ligula enim. Duis sagittis erat libero, non accumsan purus
+                congue sed.
+              </p>
+            </div>
+            <div id="testimonial">
+              <img
+                src="assets/person2.svg"
+                alt="foto-estudante"
+                id="foto-estudante"
+              />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                quis arcu porta, rhoncus enim sit amet, mattis risus. Quisque ac
+                ligula enim. Duis sagittis erat libero, non accumsan purus
+                congue sed.
+              </p>
+            </div>
+            <div id="testimonial">
+              <img
+                src="assets/person3.svg"
+                alt="foto-estudante"
+                id="foto-estudante"
+              />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                quis arcu porta, rhoncus enim sit amet, mattis risus. Quisque ac
+                ligula enim. Duis sagittis erat libero, non accumsan purus
+                congue sed.
+              </p>
+            </div>
+            <div id="testimonial">
+              <img
+                src="assets/person4.svg"
+                alt="foto-estudante"
+                id="foto-estudante"
+              />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                quis arcu porta, rhoncus enim sit amet, mattis risus. Quisque ac
+                ligula enim. Duis sagittis erat libero, non accumsan purus
+                congue sed.
+              </p>
+            </div>
+          </div>
         </section>
       </div>
     </main>
@@ -96,73 +114,63 @@
      -->
 
     <footer>
-      <img src="img/logo.png" alt="LabEscola logo" id="logo" />
-      <section id="address">
-        <h3>Endereço</h3>
-        <div class="mapouter">
-          <div class="gmap_canvas">
+      <div>
+        <img
+          src="assets/logo-trans.svg"
+          alt="LabEscola logo"
+          id="footer-logo"
+        />
+      </div>
+      <div id="footer-elements">
+        <section id="footer-address">
+          <h3 id="footer-headers">Endereço</h3>
+
+          <div id="google-map" class="mapouter">
             <iframe
-              width="600"
-              height="500"
               id="gmap_canvas"
               src="https://maps.google.com/maps?q=rua%20pais%20leme,%20215,%20pinheiros&t=&z=13&ie=UTF8&iwloc=&output=embed"
               frameborder="0"
               scrolling="no"
               marginheight="0"
               marginwidth="0"
-            ></iframe
-            ><a href="https://123movies-to.org">123movies</a><br /><style>
-              .mapouter {
-                position: relative;
-                text-align: right;
-                height: 500px;
-                width: 600px;
-              }</style
-            ><a href="https://www.embedgooglemap.net"
-              >embedding google maps on website</a
-            ><style>
-              .gmap_canvas {
-                overflow: hidden;
-                background: none !important;
-                height: 500px;
-                width: 600px;
-              }
-            </style>
+            ></iframe>
           </div>
-        </div>
-        <p>R. Pais Leme, 215, CEP 05422-150 - Pinheiros, São Paulo - SP</p>
-      </section>
+          <p id="business-address">
+            R. Pais Leme, 215, CEP 05422-150, São Paulo - SP
+          </p>
+        </section>
 
-      <section id="links">
-        <h3>Links</h3>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="cursos.html">Cursos</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contato.html">Fale conosco</a></li>
-          <li><a href="termos.html">Termos e condições</a></li>
-          <li><a href="privacidade.html">Política de privacidade</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-        </ul>
-      </section>
+        <section id="footer-links">
+          <h3 id="footer-headers">Links</h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cursos.html">Cursos</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contato.html">Fale conosco</a></li>
+            <li><a href="termos.html">Termos e condições</a></li>
+            <li><a href="privacidade.html">Política de privacidade</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+          </ul>
+        </section>
 
-      <section id="social">
-        <h3>Redes sociais</h3>
-        <ul>
-          <li><a>LOGO TWITTER</a></li>
-          <li><a>LOGO LINKEDIN</a></li>
-          <li><a>LOGO FACEBOOK</a></li>
-          <li><a>LOGO INSTAGRAM</a></li>
-        </ul>
-      </section>
+        <section id="footer-social">
+          <h3 id="footer-headers">Redes sociais</h3>
+          <div id="social-box">
+            <img src="assets/twitter.svg" alt="twitter-logo" />
+            <img src="assets/linkedin.svg" alt="linkedin-logo" />
+            <img src="assets/face.svg" alt="facebook-logo" />
+            <img src="assets/insta.svg" alt="instagram-logo" />
+          </div>
+        </section>
 
-      <section id="restricted">
-        <h3>Área restrita</h3>
-        <ul>
-          <li><a href="adm.html">Área administrativa</a></li>
-          <li><a href="portal.html">Espaço do aluno</a></li>
-        </ul>
-      </section>
+        <section id="footer-restricted">
+          <h3 id="footer-headers">Área restrita</h3>
+          <ul>
+            <li><a href="adm.html">Área administrativa</a></li>
+            <li><a href="portal.html">Espaço do aluno</a></li>
+          </ul>
+        </section>
+      </div>
     </footer>
 
     <script src="data.js"></script>
